[package]
name = "rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum      = "0.7"
tokio     = { version = "1", features = ["macros", "rt-multi-thread"] }
serde     = { version = "1", features = ["derive"] }
tower-http    = { version = "0.5", features = ["fs", "cors"] }
serde_json = "1"
nix = { version = "0.29", default-features = false, features = ["fs", "process", "signal"] }
uuid = { version = "1.8", features = ["v4"] }